
syntax = "proto3";
package user;

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc GetUsers (Empty) returns (UserListResponse);
}

message GetUserRequest { string userId = 1; }
message GetUserResponse { string userId = 1; string email = 2; }

message Empty {}
message UserListResponse { repeated UserData users = 1; }

message UserData { string userId = 1; string email = 2; }
